[package]
name = "elo"
version = "0.4.1"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { version = "0.1", optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }

[features]
async = ["dep:async-trait" ]
